--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                   <br><br>
                 </td>                          
               </tr>
+              
               <tr>
                 <td><label for="userAge">Idade</label> </td>
                 <td>
@@ -34,6 +35,16 @@
                   <br><br>
                 </td>                          
               </tr>
+
+              <tr>
+                <td><label for="userendereco">Endereço</label> </td>
+                <td>
+                  <input class="form-control" id="userendereco">
+                  <br><br>
+                </td>                          
+              </tr>
+
+
             </table>
           </div>
           <br><br>
