--- a/index.html
+++ b/index.html
@@ -1,71 +1,76 @@
 <!DOCTYPE html>
-<html >
-  <head>
-    <title>Register information at Blockchain</title>
+<html>
 
-    <link href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css' rel='stylesheet' type='text/css'>
-    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
-    <script src="./node_modules/web3/dist/web3.min.js"></script>
-    <script src="./index.js"></script>    
-  </head>
+<head>
+  <title>Register information at Blockchain</title>
 
-  <body class="container">
+  <link href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css' rel='stylesheet' type='text/css'>
+  <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
+  <script src="./node_modules/web3/dist/web3.min.js"></script>
+  <script src="./index.js"></script>
+</head>
 
-    <h1 class="page-header">Cadastro de Usuário</h1>
+<body class="container">
 
-    <div class="row">
-      <div>
-        <h3 class="sub-header">Dados pessoais</h3>
-        <br>
-        <form class="form-inline" role="form">
-          <div class="form-group">
-            <table>
-              <tr>
-                <td><label for="userName">Nome</label> </td>
-                <td>
-                  <input class="form-control" id="userName">
-                  <br><br>
-                </td>                          
-              </tr>
-              
-              <tr>
-                <td><label for="userAge">Idade</label> </td>
-                <td>
-                  <input class="form-control" id="userAge">
-                  <br><br>
-                </td>                          
-              </tr>
+  <h1 class="page-header">Cadastro de Usuário</h1>
 
-              <tr>
-                <td><label for="userEndereco">Endereço</label> </td>
-                <td>
-                  <input class="form-control" id="userEndereco">
-                  <br><br>
-                </td>                          
-              </tr>
+  <div class="row">
+    <div>
+      <h3 class="sub-header">Dados pessoais</h3>
+      <br>
+      <form class="form-inline" role="form">
+        <div class="form-group">
+          <table>
+            <tr>
+              <td><label for="userName">Nome</label> </td>
+              <td>
+                <input class="form-control" id="userName">
+                <br><br>
+              </td>
+            </tr>
+            <tr>
+              <td><label for="userAge">Idade</label> </td>
+              <td>
+                <input class="form-control" id="userAge">
+                <br><br>
+              </td>
+            </tr>
+
+            <tr>
+              <td><label for="userSexo">Sexo</label> </td>
+              <td>
+                <input class="form-control" id="userSexo">
+                <br><br>
+              </td>
+            </tr>
+
+            
 
 
-            </table>
-          </div>
-          <br><br>
-          <a href="#" onclick="setUser()" class="btn btn-primary">Inserir</a>
-        </form>
-      </div>
-    </div>    
-    <br><br>
-    <div class="row">
-      <div>
-        <h3 class="sub-header">Buscar Usuário</h3>
-        <br>
-        <form class="form-inline" role="form">
-          <a href="#" onclick="getUser()" class="btn btn-primary">Buscar</a>
-          <br><br>
-          <div class="form-group">
-            <label id="user">                        
-          </div>                
-        </form>
-      </div>
+
+
+          </table>
+        </div>
+        <br><br>
+        <a href="#" onclick="setUser()" class="btn btn-primary">Inserir</a>
+      </form>
     </div>
+  </div>
+  <br><br>
+  <div class="row">
+    <div>
+      <h3 class="sub-header">Buscar Usuário</h3>
+      <br>
+      <form class="form-inline" role="form">
+        <a href="#" onclick="getUser()" class="btn btn-primary">Buscar</a>
+        <br><br>
+        <div class="form-group">
+          <label id="user">
+        </div>
+      </form>
+    </div>
+  </div>
 
-  </body>
+</body>
+
 </html>
